Dear ImGui Test Engine
CHANGELOG

** Test Engine is regularly updated to support recent Dear ImGui version, when a change is required.
   Those changes are not all listed here.
** For a while this is going to ONLY INCLUDE BREAKING CHANGES.

2024/06/04:
- TestEngine: UI: Added "Capture on error" checkbox to top bar.
- TestEngine: UI: Reworded "Refocus" to "KeepFocus" (inverted value) in top bar
  for consistency with other options.

2024/05/29:
- TestEngine: UI: Hovering 0xXXXXXXXX identifiers in test log attempts
  to visually locate them and provide options to Debug Break in the call
  emitting this item, similar to Dear ImGui Debug Log window.
  (require latest Dear ImGui version).
- TestEngine: Improved/standardized display of ImGuiTestRef in log.
  (e.g. computed ImGuiID more consistency printed).
- TestEngine: Fixed an issue using ctx->MenuXXX functions successively
  on the same menu. In some situation a second access would erroneously
  think the previous menu was still open.
- TestEngine: Fixed an issue where calling ItemDragAndDrop() would erroneously
  manipulate mouse threshold, creating inconsistency with normal use when using
  box-select and drag'n drop together.

2024/05/28:
- TestEngine: Fixes/support for 1.90.8 WIP changes.
- TestEngine: Fixed edge case calling ScrollTo() in non-Fast mode trying to
  access window scrollbar on the same frame where it disappears.

2024/05/24:
- TestEngine: ctx->WindowResize() knows how to work with child windows
  using resize borders only, and which don't have a resize corners.

2024/05/21:
- TestEngine: *BREAKING* obsoleted ctx->YieldUntil(int frame_count) which
  seems mostly unused, misleading, and can be replaced by 2 lines of code.
  Kept redirecting inline helper (will obsolete).

2024/05/17:
- TestEngine: Fixes calling ImGuiTestEngine_QueueTests() with NULL filter.

2024/05/16:
- TestEngine: Fixes/support for 1.90.7 swapping Ctrl<>Cmd on Mac OSX,
  and ImGuiMod_Shortcut being made obsolete/unnecessary.